vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__context__tests__context_reference_missing_semicolon.snap
---
source: vhdl_syntax/src/parser/productions/context.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
context lib.foo

== tree ==
ContextReference
  Keyword(Context)
  NameList
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'

== diagnostics ==
1:16 expected ';'
