vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__context__tests__context_reference_single_name.snap
---
source: vhdl_syntax/src/parser/productions/context.rs
expression: "to_test_text(Parser::context_reference, \"context lib.foo;\",)"
---
ContextReference
  Keyword(Context)
  NameList
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
  SemiColon
