vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__context__tests__library_clause_missing_name.snap
---
source: vhdl_syntax/src/parser/productions/context.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
library ;

== tree ==
LibraryClause
  Keyword(Library)
  SemiColon

== diagnostics ==
1:8 expected LogicalNameList
