vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__context__tests__library_clause_multiple_names.snap
---
source: vhdl_syntax/src/parser/productions/context.rs
expression: "to_test_text(Parser::library_clause, \"library foo, bar;\",)"
---
LibraryClause
  Keyword(Library)
  LogicalNameList
    Identifier 'foo'
    Comma
    Identifier 'bar'
  SemiColon
