vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__context__tests__library_clause_single_name.snap
---
source: vhdl_syntax/src/parser/productions/context.rs
expression: "to_test_text(Parser::library_clause, \"library foo;\",)"
---
LibraryClause
  Keyword(Library)
  LogicalNameList
    Identifier 'foo'
  SemiColon
