vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__context__tests__use_clause_multiple_names.snap
---
source: vhdl_syntax/src/parser/productions/context.rs
expression: "to_test_text(Parser::use_clause, \"use foo.'a', lib.bar.all;\",)"
---
UseClause
  Keyword(Use)
  NameList
    Name
      NameDesignatorPrefix
        Identifier 'foo'
      SelectedName
        Dot
        CharacterLiteral ''a''
    Comma
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'bar'
      SelectedName
        Dot
        Keyword(All)
  SemiColon
