vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__context__tests__use_clause_single_name.snap
---
source: vhdl_syntax/src/parser/productions/context.rs
expression: "to_test_text(Parser::use_clause, \"use lib.foo;\",)"
---
UseClause
  Keyword(Use)
  NameList
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
  SemiColon
